Add Javadoc to all methods (English), update jnose-core to 9.0.1, bump version to 2.4.0